// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<alert> demo: > render [action] correctly 1`] = `
<div class="sd-space sd-space-vertical sd:w-full" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content"> This is an info alert. </div>
        </div>
        <div class="sd-alert-action"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
            <!--v-if-->Detail
          </button></div>
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <!---->
  <div class="sd-space-item">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title">Example</div>
          <div class="sd-alert-content"> This is an info alert. </div>
        </div>
        <div class="sd-alert-action"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
            <!--v-if-->Detail
          </button></div>
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`<alert> demo: > render [banner] correctly 1`] = `
<transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info sd-alert-banner sd-alert-center">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content">This is an info alert.</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;

exports[`<alert> demo: > render [basic] correctly 1`] = `
<transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
  <div role="alert" class="sd-alert sd-alert-info">
    <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
      </svg></div>
    <div class="sd-alert-body">
      <!--v-if-->
      <div class="sd-alert-content">This is an info alert.</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>
`;

exports[`<alert> demo: > render [closable] correctly 1`] = `
<div class="sd-row sd-row-align-start sd-row-justify-start" style="margin: -10px -20px;">
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an info alert.</div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-success">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an success alert.</div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-warning sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Warning </div>
          <div class="sd-alert-content"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-error sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Error </div>
          <div class="sd-alert-content"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><span class="sd-icon-hover"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`<alert> demo: > render [close-element] correctly 1`] = `
<div class="sd-row sd-row-align-start sd-row-justify-start" style="margin: -10px -20px;">
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content"> This is an info alert. </div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close-circle" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="m17.643 17.643 6.364 6.364m0 0 6.364 6.364m-6.364-6.364 6.364-6.364m-6.364 6.364-6.364 6.364M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z"></path>
          </svg></div>
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content"> This is an info alert. </div>
        </div>
        <!--v-if-->
        <div tabindex="-1" role="button" aria-label="Close" class="sd-alert-close-btn"> Close </div>
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`<alert> demo: > render [icon] correctly 1`] = `
<div class="sd-row sd-row-align-start sd-row-justify-start" style="margin: -10px -20px;">
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <!--v-if-->
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-success">
        <!--v-if-->
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-warning sd-alert-with-title">
        <!--v-if-->
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Warning </div>
          <div class="sd-alert-content"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-error sd-alert-with-title">
        <!--v-if-->
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Error </div>
          <div class="sd-alert-content"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`<alert> demo: > render [title] correctly 1`] = `
<div class="sd-row sd-row-align-start sd-row-justify-start" style="margin: -10px -20px;">
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title">Info</div>
          <div class="sd-alert-content">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-success sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title">Success</div>
          <div class="sd-alert-content">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-warning sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Warning </div>
          <div class="sd-alert-content"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-error sd-alert-with-title">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <div class="sd-alert-title"> Error </div>
          <div class="sd-alert-content"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>
`;

exports[`<alert> demo: > render [type] correctly 1`] = `
<div class="sd-row sd-row-align-start sd-row-justify-start" style="margin: -10px -20px;">
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-info">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-info-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-success">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-warning">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an warning alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-error">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-close-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content">This is an error alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class="sd-col sd-col-12" style="padding: 10px 20px;">
    <transition-stub name="zoom-in-top" appear="false" persisted="false" css="true">
      <div role="alert" class="sd-alert sd-alert-normal">
        <div class="sd-alert-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
        <div class="sd-alert-body">
          <!--v-if-->
          <div class="sd-alert-content"> This is an normal alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>
`;
